// Copyright 2022 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package armeria.grpc.testing;

option java_package = "testing.grpc";

import "testing/grpc/transcoding.proto";
import "google/api/annotations.proto";

service GrpcDocServicePrefixTestService {
  rpc GetMessageV1(GetMessageRequestV1) returns (Message) {
    option (google.api.http) = {
      get: "/v1/{name=messages/*}"
    };
  }
  rpc GetMessageV2(GetMessageRequestV2) returns (Message) {
    option (google.api.http) = {
      get:"/v2/messages/{message_id}"
    };
  }
}
